--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1996,7 +1996,7 @@ form .search-field -o::placeholder {
 .user-image-wrap {
   width: 48px;
   height: 48px;
-  border: 1.5px solid #0081c5;
+  border: 2px solid #363853;
   border-radius: 20px;
   display: flex;
   flex-wrap: wrap;
