--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -2731,9 +2731,10 @@
     width: 100%;
   }
   .dashboard-link-wrap {
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     padding-top: 20px;
-    height: calc(100vh - 145px);
+    /*height: calc(100vh - 145px);*/
+    /*height: auto;*/
     padding-bottom: 10px;
   }
   .dashboard-left-wrap .toggle-admin-btn {
@@ -2797,6 +2798,10 @@
     z-index: 9999;
     width: 100%;
     height: 100%;
+  }
+  .dashboard-left-wrap {
+    height: 100vh;
+    overflow-y: auto;
   }
 }
 
