--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -5640,6 +5640,7 @@ input[type="search"]::-webkit-search-cancel-button {
   line-height: 20px !important;
   font-weight: 700 !important;
   margin-top: 5px;
+  word-break: break-word;
 }
 .profile-info-right-desc > .profile-edit-form-wrap .form-field {
   width: 100%;
