--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -1473,10 +1473,6 @@
   .dashboard-right-sec {
     padding: 50px 35px 50px 50px;
   }
-  .sidebar-open .dashboard-link-wrap ul li a {
-    font-size: 14px;
-    padding: 12.5px 18px 11.5px 20px;
-  }
   .sidebar-open .dashboard-link-wrap ul li a span {
     display: block;
   }
@@ -1511,6 +1507,18 @@
   }
   .business-info-right-sec .profile-qr {
     margin-left: auto;
+  }
+}
+@media only screen and (max-width: 991px) and (min-width: 820px) {
+  .profile-inner-sec .profile-left-content {
+    width: calc(100% - 250px);
+  }
+  .profile-right-content {
+    width: 250px;
+    padding-left: 25px;
+  }
+  .profile-qr {
+    padding-top: 75px;
   }
 }
 @media only screen and (max-width: 1024px) {
@@ -2031,9 +2039,7 @@
   .dashboard-bottom-links {
     margin-top: 0;
     margin-bottom: auto;
-  }
-  .dashboard-link-wrap {
-    height: auto;
+    border-bottom: 30px solid transparent;
   }
   .dashboard-top-sec {
     flex-direction: column-reverse;
@@ -2044,11 +2050,11 @@
     right: auto;
     top: 0;
     bottom: 0;
-    margin: auto;
     transform: translateX(-100%);
     transition: all 0.5s ease-in-out;
     width: 100% !important;
     max-width: 221px;
+    height: 100vh;
   }
   .sidebar-open .dashboard-left-sec {
     transform: translateX(0);
@@ -2088,7 +2094,7 @@
   }
   .profile-qr {
     max-width: 225px;
-    margin: 40px auto 0 0;
+    margin: 40px auto 0;
   }
   .mobile-menu-button {
     position: relative;
@@ -2527,9 +2533,6 @@
     margin-top: 0;
     margin-bottom: auto;
   }
-  .dashboard-link-wrap {
-    height: auto;
-  }
   .dashboard-top-sec {
     flex-direction: column-reverse;
   }
@@ -2539,7 +2542,6 @@
     right: auto;
     top: 0;
     bottom: 0;
-    margin: auto;
     transform: translateX(-100%);
     transition: all 0.5s ease-in-out;
     width: 100% !important;
@@ -2718,7 +2720,7 @@
     padding-top: 0px;
   }
   .dashboard-logo-wrap {
-    padding-top: 60px;
+    padding-top: 30px;
     padding-bottom: 10px !important;
     padding-bottom: 0px;
     height: auto;
@@ -2731,11 +2733,9 @@
     width: 100%;
   }
   .dashboard-link-wrap {
-    /*overflow-y: auto;*/
-    padding-top: 20px;
-    /*height: calc(100vh - 145px);*/
-    /*height: auto;*/
-    padding-bottom: 10px;
+    overflow-y: auto;
+    padding-top: 0px;
+    height: calc(100vh - 113px);
   }
   .dashboard-left-wrap .toggle-admin-btn {
     right: -45px;
@@ -2755,7 +2755,8 @@
   }
   .mobile-toggle .toggle-admin-btn {
     position: absolute;
-    left: 20px;
+    left: 0px;
+    transform: translateX(20px);
     right: auto;
     z-index: 99999;
     top: 30px;
@@ -2773,7 +2774,7 @@
     transition: all 0.5s ease-in-out;
   }
   .sidebar-open .toggle-admin-btn {
-    left: 230px;
+    transform: translateX(230px);
   }
   .dashboard-right-sec {
     position: relative;
@@ -2802,6 +2803,16 @@
   .dashboard-left-wrap {
     height: 100vh;
     overflow-y: auto;
+  }
+  body.open-menu {
+    overflow-y: hidden;
+  }
+  .sidebar-open .dashboard-link-wrap ul li a {
+    padding: 10px 18px 10px 18px !important;
+    font-size: 14px;
+  }
+  .profile-bottom-info-sec {
+    max-width: 100%;
   }
 }
 
@@ -2853,6 +2864,11 @@
     min-width: auto;
     border-radius: 15px !important;
     line-height: 25px;
+  }
+  .setting-btn-link a,
+  .outline-btn {
+    font-size: 15px !important;
+    line-height: 23px !important;
   }
   p {
     font-size: 14px;
@@ -2923,10 +2939,6 @@
     padding-right: 30px;
   }
   /*sidebar toggle css starts*/
-  .sidebar-open .dashboard-link-wrap ul li a {
-    font-size: 14px;
-    padding: 12.5px 18px 11.5px 20px;
-  }
   .sidebar-open .dashboard-link-wrap ul li a span {
     display: block;
   }
@@ -2954,7 +2966,6 @@
   }
   .profile-qr {
     max-width: 225px;
-    margin: 40px auto 0 0;
   }
   .profile-info-right-desc .edit-button {
     margin-left: 15px;
@@ -2998,11 +3009,11 @@
     font-size: 14px;
     border-radius: 13px;
   }
-  .setting-btn-link a {
+  /*.setting-btn-link a {
     border-radius: 12px;
     padding: 10px 20px 10px 18px;
     font-size: 15px;
-  }
+  }*/
   .setting-btn-link a svg {
     margin-right: 10px;
     max-width: 6px;
@@ -3031,9 +3042,6 @@
   }
   .settings-profile-bottom-info-sec .login-btn input[type="submit"] {
     min-width: auto;
-    font-size: 13px;
-    padding: 14px 20px;
-    line-height: 18px;
   }
   .business-info-sec .profile-info {
     padding: 0 0 10px;
@@ -3058,10 +3066,6 @@
   }
   .settings-password-bottom-info-sec .login-btn input[type="submit"] {
     min-width: auto;
-    font-size: 12px;
-    padding: 13px 13px;
-    line-height: 18px;
-    border-radius: 12px;
   }
   .forgot-pass-btn-wrap .setting-btn-link > a,
   .settings-password-bottom-info-sec .setting-btn-link > a {
@@ -3458,6 +3462,20 @@
   .profile-info h3 {
     font-size: 17px;
     line-height: 25px;
+  }
+  .outline-btn,
+  .setting-btn-link a,
+  .btn-wrap .btn {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+  }
+  .settings-profile-bottom-info-sec .login-btn .btn {
+    padding: 12px 15px !important;
+    font-size: 15px;
+    line-height: 21px;
+  }
+  .setting-btn-link a {
+    padding-left: 22px !important;
   }
 }
 @media only screen and (max-width: 575px) {
