--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1004,6 +1004,8 @@ form .form-field select.form-control {
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 40px;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
 }
 .dashboard-left-wrap {
   height: 100%;
@@ -1347,6 +1349,7 @@ form .form-field select.form-control {
 }
 .sidebar-open .dashboard-right-sec {
   width: calc(100% - 99px);
+  transition: width 1s;
 }
 /* profile page css close*/
 
@@ -5263,10 +5266,16 @@ p.bank-name-wrap {
 .db-view-bank-listing li:hover .bank-del-wrap svg path {
   stroke: #ff3333;
 }
-.db-view-bank-listing li:hover .bank-bal-wrap,
+/*.db-view-bank-listing li:hover .bank-bal-wrap,
 .db-view-bank-listing li:hover .bank-account-num-wrap,
 .db-view-bank-listing li:hover .bank-account-date-wrap,
 .bank-account-type-wrap input:checked ~ label {
+  color: #363853;
+}*/
+.bank-account-type-wrap input:checked ~ label,
+.db-view-bank-listing li:hover .bank-account-routing-num,
+.db-view-bank-listing li:hover .bank-account-num-wrap,
+.db-view-bank-listing li:hover .bank-account-type-wrap {
   color: #363853;
 }
 .bank-account-type-wrap label {
@@ -5686,7 +5695,7 @@ li.db-view-bank-heading .bank-bal-wrap {
   line-height: 20px;
   font-weight: 600 !important;
   white-space: normal;
-  word-break: break-all;
+  word-break: break-word;
   color: #363853;
   font-family: "Visby Round CF";
 }
@@ -5739,10 +5748,12 @@ ul.dashboard-main-links {
 .dashboard-right-sec {
   margin-left: auto;
   margin-right: 0;
+  transition: width 1s;
 }
 .dashboard-link-wrap ul li a svg {
   margin-right: 0px;
   width: 19px;
+  min-width: 19px;
 }
 .dashboard-link-wrap ul li a span {
   padding-left: 20px;
@@ -5785,3 +5796,44 @@ ul.dashboard-main-links {
   margin-bottom: 18px;
   font-family: "Visby Round CF Demi";
 }
+/*  13- 03 */
+.dashboard-left-sec ::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+  background: #ddd;
+}
+.dashboard-left-sec ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0);
+}
+.dashboard-left-sec ::-webkit-scrollbar-thumb {
+  background: #24beef;
+  border-radius: 0px;
+  width: 4px;
+  height: 3px;
+}
+.dashboard-left-sec ::-webkit-scrollbar-thumb:hover {
+  background: #24beef;
+}
+.wallet-ac-info-wrap .wallet-ac-inner {
+  overflow: hidden;
+}
+.no-bank-data ul {
+  display: none;
+}
+/* Modal Fixed */
+.wallet-pg-model > div {
+  width: 100%;
+}
+.wallet-pg-model .modal-content {
+  margin: 15px;
+  min-width: auto !important;
+}
+/*#crop_image_model > div {
+  width: 100%;
+}
+#crop_image_model .modal-content {
+  margin: 15px;
+}
+#crop_image_model .modal-dialog {
+  max-width: 100% !important;
+}*/
