--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -5925,3 +5925,197 @@ div.settings-note-inner-sec.setting-noti-sec-new {
   padding-left: 0px;
   padding-right: 0px;
 }*/
+/* CSS Added for Contact Modal */
+.con-details-modal .modal-content {
+  background-color: transparent;
+  padding: 0px;
+  border-radius: 0px;
+  margin: 20px 15px;
+  box-shadow: none !important;
+}
+.con-details-modal .modal-header {
+  padding: 0px 50px 0px;
+  text-align: center;
+  margin-bottom: -60px;
+  z-index: 9;
+}
+.con-details-modal .modal-body {
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 80px 50px 40px;
+}
+.con-details-modal .con-user-profile-wrap {
+  width: 148px;
+  height: 148px;
+  border-radius: 100%;
+  box-shadow: 0px 7.3125px 14.625px rgba(0, 0, 0, 0.08);
+  border: 4px solid #fff;
+}
+.con-details-modal .con-user-profile-wrap img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.con-details-modal .modal-body h3 {
+  font-size: 28px;
+  line-height: 33px;
+  padding-bottom: 0px;
+  margin-bottom: 25px !important;
+}
+.con-details-modal .cu-details-wrap {
+  border-top: 2px solid #e0e0e0;
+  padding-top: 30px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+.cu-details-wrap {
+  border-top: 2px solid #e0e0e0;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+.cu-details-wrap > div {
+  padding-bottom: 25px;
+}
+.cu-details-wrap p.sub-head {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  color: #bdbdbd;
+  font-size: 16px;
+  line-height: 18px;
+  padding-bottom: 10px;
+  font-family: "Comfortaa";
+  font-weight: 500;
+}
+.cu-details-wrap p:last-child {
+  font-size: 22px;
+  color: #363853;
+  line-height: 27px;
+  letter-spacing: 0.02em;
+  font-weight: 700;
+  font-family: "Comfortaa";
+  padding-bottom: 0px;
+}
+.con-modal-btn-wrap {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0px;
+}
+.con-modal-btn-wrap .btn:last-child {
+  margin-left: 10px;
+}
+.con-modal-btn-wrap .btn:last-child {
+  margin-left: 10px;
+}
+.con-modal-btn-wrap .btn {
+  min-width: auto;
+  padding: 18px 15px !important;
+  font-family: "Comfortaa";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  min-width: 148px;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+.con-modal-btn-wrap .btn svg {
+  width: 24px;
+  margin-right: 20px;
+}
+.con-modal-rm-wrap a {
+  font-size: 20px;
+  line-height: 22px;
+  color: #363853;
+  font-weight: 600;
+}
+.con-modal-rm-wrap a:hover {
+  color: #0081c5;
+}
+#contact_detail > div {
+  width: 100%;
+  max-width: 420px;
+}
+/* Notification list Page  */
+.notification-pg-list-wrap .notification-pcw {
+  width: calc(100% - 48px);
+  padding-right: 20px;
+}
+.notification-pg-list-wrap ul li {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  padding: 15px 23px 15px 13px;
+  background-color: #fff;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  transition: all 0.4s linear;
+}
+.notification-pg-list-wrap ul li:hover {
+  box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08);
+  background-color: #0081c50d;
+}
+.notification-rm-wrap svg {
+  cursor: pointer;
+  transition: all 0.4s linear;
+}
+.notification-top-sec {
+  padding-left: 13px;
+  margin-bottom: 25px;
+}
+.notification-pg-list-wrap .notifi-content p {
+  font-size: 14px !important;
+  line-height: 22px !important;
+}
+.notification-pcw {
+  display: flex;
+  width: 100%;
+  align-items: start;
+}
+.notification-pcw .notifi-ic-wrap {
+  width: 53px;
+}
+.notification-pcw .notifi-ic-wrap svg {
+  width: 53px;
+}
+
+.notification-pcw .notifi-content {
+  width: calc(100% - 53px);
+  padding-left: 15px;
+}
+.notification-pcw .notifi-content p {
+  color: #bdbdbd;
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  font-weight: 600;
+  word-break: break-word;
+}
+.notification-pcw .notifi-content p:first-child {
+  color: #363853;
+  padding-bottom: 2px;
+}
+.invited-con-title-wrap {
+  margin-top: 30px;
+}
+.invited-con-listing-container .con-listing-phone {
+  display: flex;
+  max-width: 180px !important;
+  min-width: 180px !important;
+}
+.con-listing-container.invited-con-listing-container {
+  margin-top: 25px !important;
+}
+.cm-sucess-msg {
+  font-size: 16px;
+  font-weight: 800;
+  font-family: "Comfortaa";
+  color: #0080c4;
+  padding-bottom: 0px !important;
+}
