--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -1086,11 +1086,7 @@
     max-width: 20px;
   }
   .contact-top-btn-nav {
-    max-width: 530px;
     padding-left: 20px;
-  }
-  .contact-serch-main {
-    width: calc(100% - 530px);
   }
   .contact-listing-wrap > li > div {
     margin-right: 15px;
@@ -1229,6 +1225,15 @@
 @media only screen and (max-width: 1366px) and (min-width: 992px) {
   .business-info-right-sec {
     padding: 40px 0px 20px 20px !important;
+  }
+  .contact-top-btn-nav .con-btn-wrap {
+    padding-right: 15px;
+  }
+  .contact-top-btn-nav .con-btn-wrap > .btn{
+    padding: 7px 10px;
+  }
+  .contact-top-btn-nav .btn img{
+    max-width: 29px;
   }
 }
 @media only screen and (max-width: 1199px) and (min-width: 992px) {
@@ -1597,6 +1602,8 @@
   }
   .contact-top-btn-nav {
     padding-left: 0px;
+    width: 100%;
+    justify-content: left;
   }
   #already_register_user .modal-body p.user_name {
     margin: 30px 0px;
@@ -2588,8 +2595,8 @@
     margin-right: 5px;
   }
   .contact-top-btn-nav .btn {
-    padding: 10px;
-    font-size: 13px;
+    padding: 15px 15px;
+    font-size: 15px;
   }
   /* Wallet Page Start */
   .dashboard-right-sec {
@@ -2842,7 +2849,7 @@
     left: 0px;
     transform: translateX(20px);
     right: auto;
-    z-index: 99999;
+    z-index: 99;
     top: 30px;
     bottom: auto;
     margin: auto;
@@ -2856,6 +2863,9 @@
     align-items: center;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
+  }
+  .sidebar-open .mobile-toggle .toggle-admin-btn {
+      z-index: 99999;
   }
   .sidebar-open .toggle-admin-btn {
     transform: translateX(230px);
@@ -2914,6 +2924,7 @@
   }
   .contact-top-btn-nav {
     max-width: 100%;
+    width: 100%;  
     justify-content: left;
   }
   .notification-rm-wrap svg {
@@ -3571,7 +3582,8 @@
   }
   .outline-btn,
   .setting-btn-link a,
-  .btn-wrap .btn {
+  .btn-wrap .btn,
+  .del-modal-main button.btn.btn-primary.px-4.py-3 {
     padding-top: 10px !important;
     padding-bottom: 10px !important;
   }
@@ -3600,7 +3612,7 @@
     padding-top: 70px;
   }
   .con-details-modal .modal-body {
-    padding: 65px 15px 35px;
+    padding: 70px 15px 35px;
   }
   .con-details-modal .modal-body h3 {
     font-size: 22px;
@@ -3650,6 +3662,26 @@
   .title-content-wrap h3 {
     font-size: 24px;
     line-height: 29px;
+  }
+  /* Updated on  24-03 */
+  .contact-pg-popup form{
+      margin-top:15px;
+  }
+  .con-listing-info{
+    max-width: 200px;
+    min-width: 200px;
+  }
+  .contact-listing-wrap > li > div{
+    margin-right: 8px;
+  }
+  #invite-sent-popup .modal-body h3{
+    font-size: 24px !important;
+  }
+  .invite-sent-modal .btn{
+    margin-top: 20px;
+  }
+  .contact-serch-main{
+    width: 100% !important;
   }
 }
 @media only screen and (max-width: 575px) {
